client: disable java preview features